[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = "A library for creating GraphQL APIs"
keywords = ["grapqhl", "api", "rest", "starlette", "async"]
license = "MIT"
name = "strawberry-graphql"
packages = [{include = "strawberry"}]
readme = "README.md"
version = "0.33.1"

documentation = "https://strawberry.rocks/"
homepage = "https://strawberry.rocks/"
repository = "https://github.com/strawberry-graphql/strawberry"

classifiers = [
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["strawberry/py.typed"]

[tool.poetry.dependencies]
asgiref = {version = "^3.2", optional = true}
click = "^7.0"
django = {version = ">=2,<4", optional = true}
flask = {version = "^1.1", optional = true}
graphql-core = {version = "^3.0.0"}
hupper = "^1.5"
pydantic = {version = "^1.6.1", optional = true}
pygments = "^2.3"
python = "^3.7"
starlette = "^0.13.6"
typing_extensions = "^3.7.4"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
asgiref = "^3.2"
black = {version = "^20.8b1", allow-prereleases = true}
django = {version = ">=2,<4"}
flake8 = "^3.8"
flake8-bugbear = "^20.1"
flake8-eradicate = "^0.4.0"
isort = "^5.5.3"
mypy = "^0.782"
pdbpp = "^0.10.2"
pre-commit = "^2.7.1"
pydantic = "^1.6.1"
pytest = "^6.1"
pytest-asyncio = "^0.14.0"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10"
pytest-django = {version = "^3.10"}
pytest-emoji = "^0.2.0"
pytest-flask = {version = "^1.0.0"}
pytest-mock = "^3.3"
pytest-mypy-plugins = "^1.4"
requests = "^2.24.0"

[tool.poetry.extras]
django = ["django", "pytest-django"]
flask = ["flask", "pytest-flask"]
pydantic = ["pydantic"]

[tool.poetry.scripts]
strawberry = "strawberry.cli:run"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
